# Vura

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  README.md  crowdin.yml
crash-handler/: CMakeLists.txt
crash-handler/app/: app_version.h  app_version.h.in
crash-handler/breakpad/: system-exception-handler.cpp  system-exception-handler.h
crash-handler/crashhandler/: CMakeLists.txt  detaildialog.cpp  detaildialog.h  dumpsender.cpp  dumpsender.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
libvura/: CMakeLists.txt  constants.c  constants.h  libvura.cpp  version.c.in  vura-data.h  vura-defs.h  vura-deserializer.h  vura-error.cpp  vura-overloads.h  vura-serializer.cpp  vura-serializer.h  vuraconfig.h.in  vuraversion.c.in  vuraversion.h
libvura/cmake/: os-macos.cmake  os-windows.cmake  vura-version.cmake
libvura/cmake/linux/: libvura.pc.in
libvura/filesystem/: applicationdatafile.cpp  applicationdatafile.h  hotkeysfile.cpp  hotkeysfile.h  playlistfile.cpp  playlistfile.h  videomarkersfile.cpp  videomarkersfile.h  vuraprojectfile.cpp  vuraprojectfile.h
libvura/filetypes/: application-data.h  hotkeys-data.h  markers-data.h  playlist-data.h  project-data.h
libvura/pkgconfig/: libvura.pc.in
libvura/util/: base.c  base.h  blog.cpp  blog.h  c99defs.h  config-file.c  config-file.h  constants.c  constants.h  defs.h  logger.cpp  logger.h  platform-windows.c  platform.c  platform.h  singleinstance.h
libvura/util/apple/: cfstring-utils.h
libvura/util/windows/: CoTaskMemPtr.hpp  ComPtr.hpp  HRError.hpp  WinHandle.hpp  obfuscate.c  obfuscate.h  win-version.h
shared/VuraCrashHandler/: CMakeLists.txt  QBreakpadHandler.cpp  QBreakpadHandler.h  QBreakpadHttpUploader.cpp  QBreakpadHttpUploader.h
shared/VuraCrashHandler/singletone/: call_once.h  singleton.h
shared/libvura/: CMakeLists.txt  libvura.cpp  libvura.h  vura-data.cpp  vura-data.h  vura-datafile-handler.cpp  vura-datafile-handler.h  vura-deserializer.cpp  vura-error.h  vura-file-handler.cpp  vura-file-handler.h  vura-helpers.cpp  vura-helpers.h  vura-hotkeys.cpp  vura-hotkeys.h  vura-overloads.h  vura-serializer.cpp  vura-serializer.h  vura-settings.cpp  vura-settings.h  vura-startup.cpp  vura-startup.h  vuraconfig.h.in
shared/libvura/cmake/: libvuraConfig.cmake.in
shared/libvura/cmake/linux/: libvura.pc.in
shared/libvura/cmake/macos/: entitlements.plist
shared/libvura/cmake/windows/: vura-module.rc.in
shared/libvura/data/: video-markers.cpp  video-markers.h
shared/libvura/media-io/: media-functions.cpp  media-functions.h
shared/libvura/models/: log-viewer-model.cpp  log-viewer-model.h  vura-playlistmodel.cpp  vura-playlistmodel.h
shared/libvura/playlist/: playlist-model.cpp  playlist-model.h  vura-playlist-file-parser.cpp  vura-playlist-file-parser.h  vura-playlist-private.cpp  vura-playlist-private.h  vura-playlist.cpp  vura-playlist.h
shared/libvura/util/: blogger.cpp  blogger.h  messagebox.cpp  messagebox.h  playlistmanager.cpp  playlistmanager.h  singleinstance.cpp
src/: CMakeLists.txt  constants.cpp  constants.h  main.cpp  main.h
src/cmake/: os-macos.cmake  os-windows.cmake  ui-components.cmake  ui-dialogs.cmake  ui-models.cmake  ui-qt.cmake  ui-settings.cmake  ui-utility.cmake  ui-widgets.cmake
src/cmake/windows/: vura.manifest  vura.rc.in
src/components/: AbsoluteSlider.cpp  AbsoluteSlider.h  ClickableLabel.h  ComboBoxIgnoreWheel.h  ContinuePlaybackRibbon.cpp  ContinuePlaybackRibbon.h  DoubleSpinBoxIgnoreWheel.h  MonitoredTextEdit.h  PlaylistTableView.h  RangeSlider.cpp  RangeSlider.h  SliderIgnoreScroll.cpp  SliderIgnoreScroll.h  SpinBoxIgnoreWheel.h  markerslider.cpp  markerslider.h  menubar.cpp  menubar.h  system-tray.cpp  system-tray.h  videocontrolwidget.cpp  videocontrolwidget.h  videoplayer.cpp  videoplayer.h  videoslider.cpp  videoslider.h
src/data/: help.html
src/data/locale/: en_US.ts
src/dialogs/: FeedbackDialog.cpp  FeedbackDialog.h  LogUploadDialog.cpp  LogUploadDialog.h  MarkerEditDialog.cpp  MarkerEditDialog.h  about.cpp  about.h  convertmediadialog.cpp  convertmediadialog.h  editmarker.cpp  editmarker.h  helpdialog.cpp  helpdialog.h  logviewer.cpp  logviewer.h  markerdialog.cpp  markerdialog.h  mediainformation.cpp  mediainformation.h  missingfiles.cpp  missingfiles.h  permissions.cpp  permissions.h  updatewindow.cpp  updatewindow.h  whatsnew.cpp  whatsnew.h
src/forms/: ContinuePlaybackRibbon.ui  FeedbackDialog.ui  LogUploadDialog.ui  MarkerEditDialog.ui  VuraDockWidget.ui  about.ui  convertmediadialog.ui  editmarker.ui  helpdialog.ui  logviewer.ui  mainwindow.ui  markerdialog.ui  mediainformation.ui  missingfiles.ui  permissions.ui  settingswindow.ui  testwindow.ui  updatewindow.ui  videocontrolwidget.ui  vura.qrc  whatsnew.ui
src/forms/styles/: dark.qss  light.qss
src/models/: actionmanager.cpp  actionmanager.h  application.cpp  application.h  hotkeyeditormodel.cpp  hotkeyeditormodel.h  logmessages.cpp  logmessages.h  playlistmodel.cpp  playlistmodel.h  qmediaplaylist.cpp  qmediaplaylist.h  qmediaplaylist_p.cpp  qmediaplaylist_p.h
src/settings/: hotkeywidget.cpp  hotkeywidget.h  hotkeywidget.ui  settingswindow.cpp  settingswindow.h
src/style/: qtthemeprovider.h  windowsthemeprovider.cpp
src/utility/: applicationdata.cpp  applicationdata.h  filemanager.cpp  filemanager.h  hdata.cpp  hdata.h  hotkeys.cpp  hotkeys.h  logger.cpp  logger.h  playlist.cpp  playlist.h  playlist_p.cpp  playlist_p.h  playlistfileparser.cpp  playlistfileparser.h  qplaylistfileparser.cpp  qplaylistfileparser.h  qt-wrappers.cpp  qt-wrappers.h  singleinstance.h  startup.cpp  startup.h  update.cpp  update.h  updater_sparkle.mm  videomarker-manager.cpp  videomarker-manager.h  videomarkers.cpp  videomarkers.h
src/widgets/: VuraDockWidget.cpp  VuraDockWidget.h  hvideowidget.cpp  hvideowidget.h  mainwindow.cpp  mainwindow.h  testwindow.cpp  testwindow.h
tests/: CMakeLists.txt  tst_coretest.cpp
tests/windows/: CMakeLists.txt
tests/windows/utility/: TestVideoMarkers.cpp
(+41 files in other folders)
